Remove fake element created before links so background aligns correctly
This rule seems to no longer apply to the skin in it's current state,
and seems to be causing problems with references. These rules are an issue
for that it creates a fake block element (which adds extra spacing at the
top), creates a static height, and pulls it up with a negative top margin.

It seems best to remove this CSS block.

Bug: T181490

--- a/resources/screen-desktop.less
+++ b/resources/screen-desktop.less
@@ -60,14 +60,6 @@
 	display: none;
 }
 
-/* Add offset to make anchor links work with the fixed header */
-:target:before {
-	content: '';
-	display: block;
-	height: @fixed-header-height;
-	margin: -@fixed-header-height 0 0;
-}
-
 .dropdown {
 	display: none !important;
 }
